A lot of fixes. Implemented average grade
