# swagger_server/swagger/swagger.yaml
@@ -9,8 +9,8 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-- url: https://virtserver.swaggerhub.com/tutorial/1.0.0
-  description: SwaggerHub API Auto Mocking
+- url: http://localhost:8080
+  description: Local development server
 paths:
   /student/{student_id}:
     get:
@@ -26,7 +26,6 @@ paths:
         explode: false
         schema:
           type: string
-          format: uuid
       responses:
         "200":
           description: Successful operation
@@ -53,7 +52,6 @@ paths:
         explode: false
         schema:
           type: string
-          format: uuid
       responses:
         "200":
           description: Successful operation
@@ -67,6 +65,33 @@ paths:
           description: Bad Request
         "404":
           description: Student with specified student_id cannot be found
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+  /student/{student_id}/average_grade:
+    get:
+      summary: Get student average grade
+      description: Returns the average grade of a student
+      operationId: get_student_average_grade
+      parameters:
+      - name: student_id
+        in: path
+        description: the uid
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: number
+                format: float
+        "400":
+          description: Invalid ID
+        "404":
+          description: Student not found or has no grades
       x-openapi-router-controller: swagger_server.controllers.default_controller
   /student:
     post:
@@ -86,7 +111,6 @@ paths:
             application/json:
               schema:
                 type: string
-                format: uuid
                 x-content-type: application/json
         "400":
           description: "invalid input, object invalid"
@@ -102,7 +126,8 @@ components:
       type: object
       properties:
         student_id:
-          type: integer
+          type: string
+          readOnly: true
         first_name:
           type: string
         last_name:
@@ -112,7 +137,6 @@ components:
           items:
             $ref: "#/components/schemas/GradeRecord"
       example:
-        student_id: 0
         last_name: last_name
         grade_records:
         - grade: 6.0274563
